Desktop/Project/RHMN/force-app/main/default/objects/IBC_Meeting__c/IBC_Meeting__c.object-meta.xml
<CustomObject>
    <label>IBC Meeting</label>
    <nameField>
        <displayFormat>Meeting-{0000}</displayFormat>
        <label>IBC Meeting</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IBC Meetings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>