Desktop/Project/RHMN/force-app/main/default/objects/IBC_Meeting__c/fields/IBC_Admin_Region__c.field-meta.xml
<CustomField>
    <fullName>IBC_Admin_Region__c</fullName>
    <label>IBC Admin Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>America</fullName>
            </value>
            <value>
                <fullName>Europe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>