Desktop/Project/RHMN/force-app/main/default/objects/IBC_Meeting__c/fields/Meeting_schedule_Type__c.field-meta.xml
<CustomField>
    <fullName>Meeting_schedule_Type__c</fullName>
    <label>Meeting schedule Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Regular</fullName>
            </value>
            <value>
                <fullName>Ad-Hoc</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>