Desktop/Project/RHMN/force-app/main/default/objects/IBC_Meeting__c/fields/Regions__c.field-meta.xml
<CustomField>
    <fullName>Regions__c</fullName>
    <label>Regions</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Joint_session__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>America</fullName>
            </value>
            <value>
                <fullName>Europe</fullName>
            </value>
            <value>
                <fullName>Non-japan Asia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>